resources-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-tutorial-backend-service
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: frontend-port
  selector:
    app: react-tutorial
