resources-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-tutorial-frontend-service
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 80
    protocol: TCP
    name: frontend-port
  selector:
    app: react-tutorial
